# cg_descent

./: CMakeLists.txt  README.md
cg_descent_1.1/: CMakeLists.txt  cg_descent.c  cg_descent.h  cg_descent.parm  driver1.c  driver2.c  driver3.c  driver4.c  driver5.c
cg_descent_3.0/: CMakeLists.txt
cg_descent_4.0/: CMakeLists.txt  cg_descent.c  cg_descent.h  cg_user.h  driver1.c  driver4.c  driver5.c
cg_descent_5.0/: CMakeLists.txt  cg_descent.c  cg_descent.h  cg_user.h
cg_descent_6.0/: CMakeLists.txt
